deployments/ingress/external-services-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: external-services-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: urlshorten.tim.hsieh
      http:
        paths:
          - backend:
              serviceName: url-shorten
              servicePort: 80
