deployments/ingress/internal-services-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: internal-services-ingress
  annotations:
    kubernetes.io/ingress.class: "gce-internal"
spec:
  rules:
    # Prometheus Stack
    # - host: prometheus.tim.hsieh
    #   http:
    #     paths:
    #       - backend:
    #           serviceName: prometheus-kube-prometheus-prometheus
    #           servicePort: 9090
    - host: grafana.tim.hsieh
      http:
        paths:
          - backend:
              serviceName: prometheus-grafana
              servicePort: 80
    # - host: alertmanager.tim.hsieh
    #   http:
    #     paths:
    #       - backend:
    #           serviceName: prometheus-kube-prometheus-alertmanager
    #           servicePort: 9093
    # ELK Stack
    - host: kibana.tim.hsieh
      http:
        paths:
          - backend:
              serviceName: kibana-kb-http
              servicePort: 5601
